# fiberlab

./: CHANGES.md  LICENSE  MANIFEST.in  README.md  readthedocs.yml  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  installation.rst  knownissues.rst  scripts.rst
docs/api/: fiberlab.collimated.rst  fiberlab.contour.rst  fiberlab.fullcone.rst  fiberlab.io.rst  fiberlab.plot.rst  fiberlab.rst  fiberlab.util.rst  modules.rst
docs/help/: fiberlab_browse_images.rst  fiberlab_collimated_FRD.rst  fiberlab_collimated_farfield.rst  fiberlab_farfield_inspector.rst  fiberlab_fullcone_ee_fratio.rst  fiberlab_fullcone_farfield.rst  fiberlab_fullcone_throughput.rst
docs/include/: links.rst
docs/scripts/: write_script_help.py
fiberlab/: __init__.py  collimated.py  contour.py  fullcone.py  io.py  plot.py  util.py  version.py
fiberlab/scripts/: __init__.py  browse_images.py  collimated_FRD.py  collimated_farfield.py  convert_to_fits.py  farfield_inspector.py  fullcone_ee_fratio.py  fullcone_farfield.py  fullcone_throughput.py  markcircles.py  scriptbase.py
