[metadata]
name = fobos-fiberlab
description = FOBOS Fiber Performance Tools
long_description = file: README.md
long_description_content_type = text/markdown
author = Kyle B. Westfall
author_email = westfall@ucolick.org
license = BSD-3
url = https://github.com/Keck-FOBOS/fiberlab
edit_on_github = False
github_project = Keck-FOBOS/fiberlab
keywords = fobos, FOBOS, astronomy, Keck, UCO, spectroscopy, instrumentation, spectrograph
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Documentation :: Sphinx
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces

[options]
zip_safe = False
use_2to3 = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
include_package_data = True
install_requires =
    numpy>=1.21
    astropy>=4.3
    extension-helpers>=0.1
    scipy>=1.7
    matplotlib>=3.4
    scikit-learn>=0.24
    scikit-image>=0.19
    IPython>=7.26

[options.extras_require]
test =
    pytest>=6.2
    pytest-astropy
    tox
    pytest-cov
    coverage
    codecov
docs =
    sphinx
    sphinx-automodapi
    sphinx_rtd_theme
dev =
    pytest>=6.2
    pytest-astropy
    tox
    pytest-cov
    coverage
    codecov
    sphinx
    sphinx-automodapi
    sphinx_rtd_theme

[options.package_data]
* = *.md, data/*, data/*/*

[options.entry_points]
console_scripts =
    fiberlab_collimated_FRD = fiberlab.scripts.collimated_FRD:CollimatedFRD.entry_point
    fiberlab_collimated_farfield = fiberlab.scripts.collimated_farfield:CollimatedFarField.entry_point
    fiberlab_fullcone_farfield = fiberlab.scripts.fullcone_farfield:FullConeFarField.entry_point
    fiberlab_fullcone_ee_fratio = fiberlab.scripts.fullcone_ee_fratio:FullConeEEFRatio.entry_point
    fiberlab_fullcone_throughput = fiberlab.scripts.fullcone_throughput:FullConeThroughput.entry_point
    fiberlab_browse_images = fiberlab.scripts.browse_images:BrowseImages.entry_point

[tool:pytest]
testpaths = "fiberlab/tests"

[coverage:run]
omit =
    fiberlab/tests/*
    fiberlab/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_


